frame/support/test/tests/pallet_ui/dev_mode_without_arg_default_hasher.stderr
error: `_` can only be used in dev_mode. Please specify an appropriate hasher.
  --> tests/pallet_ui/dev_mode_without_arg_default_hasher.rs:21:47
   |
21 |     type MyStorageMap<T: Config> = StorageMap<_, _, u32, u64>;
   |                                                  ^

error[E0432]: unresolved import `pallet`
 --> tests/pallet_ui/dev_mode_without_arg_default_hasher.rs:3:9
  |
3 | pub use pallet::*;
  |         ^^^^^^ help: a similar path exists: `test_pallet::pallet`
